[gd_scene load_steps=4 format=3 uid="uid://bij6vtgo5sr7f"]

[ext_resource type="Script" path="res://scripts/shelf.gd" id="1_sfxd1"]
[ext_resource type="Texture2D" uid="uid://cuxoqexl2yei3" path="res://art/shelf_backdrop.png" id="2_wgh8v"]
[ext_resource type="Texture2D" uid="uid://bfn0kcs63lmb8" path="res://art/icon.svg" id="2_wxbav"]

[node name="Shelf" type="Node2D"]
position = Vector2(112, 80)
script = ExtResource("1_sfxd1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wgh8v")

[node name="Cursor" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0.768627, 1)
scale = Vector2(0.171875, 0.171875)
texture = ExtResource("2_wxbav")

[node name="CanvasLayer" type="CanvasLayer" parent="Cursor"]
visible = false

[node name="Label" type="Label" parent="Cursor/CanvasLayer"]
offset_left = 1.0
offset_top = 111.0
offset_right = 113.0
offset_bottom = 129.0
theme_override_font_sizes/font_size = 12
text = "cursor"

[node name="Books" type="Node2D" parent="."]

[node name="BookTitleLabel" type="Label" parent="."]
offset_left = -160.0
offset_top = 36.0
offset_right = 160.0
offset_bottom = 71.0
theme_override_font_sizes/font_size = 14
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BookAuthorLabel" type="Label" parent="."]
offset_left = -160.0
offset_top = 42.0
offset_right = 160.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 10
text = "Author"
horizontal_alignment = 1
vertical_alignment = 2

[node name="BookPubLabel" type="Label" parent="."]
visible = false
offset_left = -160.0
offset_top = 39.0
offset_right = 160.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 8
text = "2024"
horizontal_alignment = 1
vertical_alignment = 1
